// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal renders correctly hidden state 1`] = `null`;

exports[`ConfirmModal renders correctly loading state 1`] = `
<div
  className="css-18615gn"
  onMouseDown={[Function]}
>
  <div
    className="css-hm23lf"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-vf0gu5"
    >
      Please confirm
    </h2>
    <svg
      className="css-uue8s9"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-1ff36h2"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-1414iyd"
    >
      <div
        className="css-99c7t3"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            autoFocus={true}
            className="css-ywqypk"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
            <div
              className="css-1ayzrn4"
            >
              <svg
                className="css-hgbw48"
                viewBox="0 0 128 128"
              >
                <use
                  xlinkHref="#icon-spinner"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-alng9s"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`ConfirmModal renders correctly visible state 1`] = `
<div
  className="css-18615gn"
  onMouseDown={[Function]}
>
  <div
    className="css-hm23lf"
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <h2
      className="css-vf0gu5"
    >
      Please confirm
    </h2>
    <svg
      className="css-uue8s9"
      onClick={[MockFunction]}
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#close"
      />
    </svg>
    <div
      className="css-1ff36h2"
    >
      Removing user John Appleseed
    </div>
    <div
      className="css-1414iyd"
    >
      <div
        className="css-99c7t3"
      >
        <div
          className="css-1zje6z"
        >
          <button
            className="css-y3htlr"
            onClick={[MockFunction]}
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          className="css-1zje6z"
        >
          <button
            autoFocus={true}
            className="css-cyamni"
            onClick={[MockFunction]}
            type="button"
          >
            Remove
          </button>
        </div>
      </div>
    </div>
    <div
      className="css-alng9s"
      onFocus={[Function]}
      tabIndex="0"
    />
  </div>
</div>
`;
